--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -477,13 +477,11 @@
           <div id="customerCalendar" class="h-full min-h-[400px] w-full md:min-h-[600px] lg:min-h-[700px]"></div>
         </div>
 
-        <!-- Quick Info Sidebar -->
         <div class="w-full border-t border-orange-200 bg-white/70 lg:w-96 lg:border-l lg:border-t-0">
           <div class="h-full px-4 py-6">
             <h3 class="mb-3 flex justify-center text-lg font-bold text-orange-900">Reserve Facility</h3>
-            <div id="customerReservationQuick" class="h-full overflow-y-auto pr-1">
+            <div id="customerReservationQuick" class="flex items-center h-full overflow-y-auto pr-1">
               <form id="bookingForm" class="space-y-4 text-sm">
-                <!-- Choose Service -->
                 <div>
                   <label class="mb-1 block text-xs font-semibold text-gray-700">Reservation Type</label>
                   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
@@ -502,24 +500,6 @@
                   </div>
                 </div>
 
-                <!-- Main Client Name -->
-                <!-- <div>
-                  <label for="clientName" class="block text-xs font-semibold text-gray-700 mb-1">Main Client Name</label>
-                  <input id="clientName" name="clientName" type="text" class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400" placeholder="Enter your full name" required />
-                </div> -->
-
-                <!-- Quick Booking Tip -->
-                <div class="rounded-md border border-orange-200 bg-orange-50 p-3 text-xs text-orange-900">
-                  <p class="mb-1 font-semibold">How to reserve</p>
-                  <ol class="list-decimal space-y-1 pl-4 text-xs">
-                    <li>Click a <span class="font-semibold">date</span> on the calendar.</li>
-                    <li>Select your <span class="font-semibold">duration</span>.</li>
-                    <li>Choose an available <span class="font-semibold">time slot</span>.</li>
-                  </ol>
-                  <!-- <p class="mt-2 text-xs">Slots are 1 hour each. Longer durations combine slots automatically. Hours: 9:00 AM – 12:00 AM.</p> -->
-                </div>
-
-                <!-- Select Date -->
                 <div>
                   <label for="bookingDate" class="mb-1 block text-xs font-semibold text-gray-700">Select Date</label>
                   <input
@@ -531,52 +511,10 @@
                     placeholder="Pick a date from the calendar"
                   />
                 </div>
-
-                <!-- Duration -->
-                <div>
-                  <label for="duration" class="mb-1 block text-xs font-semibold text-gray-700">Duration</label>
-                  <select
-                    id="duration"
-                    name="duration"
-                    class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
-                    required
-                  >
-                    <option value="">Select duration</option>
-                    <option value="1">1 hour</option>
-                    <option value="2">2 hours</option>
-                    <option value="3">3 hours</option>
-                    <option value="4">4 hours</option>
-                    <option value="5">5 hours</option>
-                    <option value="6">6 hours</option>
-                    <option value="7">7 hours</option>
-                  </select>
-                </div>
+                
+                <!-- Dynamic Time Slots -->
+                <div id="timeSlotsContainer" class="space-y-2"></div>
                 <p id="timeError" class="hidden text-xs text-red-600" aria-live="polite"></p>
-
-                <!-- Time slot selection -->
-                <div>
-                  <label for="startTime" class="mb-1 block text-xs font-semibold text-gray-700">Time Slot</label>
-                  <select
-                    id="startTime"
-                    name="startTime"
-                    class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400"
-                    required
-                  >
-                    <option value="">Select a time slot</option>
-                  </select>
-                  <p class="mt-1 text-xs text-gray-500">
-                    Available time slots will appear after you choose a date and duration.
-                  </p>
-                  <input id="endTime" name="endTime" type="hidden" />
-                  <div id="slotPreview" class="mt-2 space-y-1 text-[11px] text-gray-700"></div>
-                </div>
-
-                <!-- Team Members -->
-                <!-- <div>
-                  <label for="teamMembers" class="block text-xs font-semibold text-gray-700 mb-1">Team Members</label>
-                  <input id="teamMembers" name="teamMembers" type="number" min="0" max="8" value="0" class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400" />
-                  <p class="mt-1 text-xs text-gray-500">Max 8 additional players</p>
-                </div> -->
 
                 <!-- Submit -->
                 <div>
