fix: payment stats

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -165,9 +165,9 @@
         <div
           id="section-stats"
           data-toggles="0::0::0::0::0::0::0"
-          data-startingtexts="::::::::Active Monthly::Active::Nearly Expiring"
-          data-highlighttexts="Overall Total::Gym::Reservation::Product::Customers::Reservations::Passes"
-          data-endingtexts="Sales::Revenue::Revenue::Sales::::::"
+          data-startingtexts="::::::::Monthly::Active::Expiring"
+          data-highlighttexts="Overall::Gym::Reservation::Products::Passes::Reservations::Passes"
+          data-endingtexts="Revenue::Revenue::Revenue::Revenue::::::"
           data-types="overall total sales::gym revenue::reservation revenue::product sales::active monthly customers::active reservations::nearly expiring monthly passes"
         ></div>
         <div
